syntax = "proto3";

package prediction;

option go_package = "github.com/tool_predict/proto";

// Prediction service for communicating with too_predict
service PredictionService {
  // SendPrediction sends an ensemble prediction to too_predict
  rpc SendPrediction(EnsemblePredictionRequest) returns (PredictionResponse);

  // GetPredictionStatus checks the status of a sent prediction
  rpc GetPredictionStatus(PredictionStatusRequest) returns (PredictionStatusResponse);
}

// EnsemblePredictionRequest contains the complete prediction data
message EnsemblePredictionRequest {
  string id = 1;
  string game_type = 2;
  repeated int32 final_numbers = 3;  // The 6 predicted numbers
  string voting_strategy = 4;
  int64 generated_at = 5;

  repeated IndividualPrediction predictions = 6;
  repeated AlgorithmContribution algorithm_stats = 7;
}

// IndividualPrediction represents a single algorithm's prediction
message IndividualPrediction {
  string id = 1;
  string algorithm_name = 2;
  repeated int32 numbers = 3;
  double confidence = 4;
  int64 generated_at = 5;
}

// AlgorithmContribution represents an algorithm's contribution to the ensemble
message AlgorithmContribution {
  string algorithm_name = 1;
  double weight = 2;
  int32 match_count = 3;
  double confidence = 4;
}

// PredictionResponse is the response after sending a prediction
message PredictionResponse {
  string prediction_id = 1;
  bool success = 2;
  string message = 3;
  int64 processed_at = 4;
}

// PredictionStatusRequest is used to check prediction status
message PredictionStatusRequest {
  string prediction_id = 1;
}

// PredictionStatusResponse contains the prediction status
message PredictionStatusResponse {
  string prediction_id = 1;
  string status = 2;  // "pending", "processed", "failed"
  int64 sent_at = 3;
  int64 processed_at = 4;
  string error_message = 5;
}
